objects/AccountBrand.object
<CustomObject>
    <fields>
        <fullName>partdir_mp__About__c</fullName>
        <label>About</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Approver_Email__c</fullName>
        <formula>Account.partdir_mp__Approver__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Featured_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Transportation &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Hospitality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>partdir_mp__Is_Partner_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Marketplace Listing Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>partdir_mp__Location__c</fullName>
        <label>Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Rating_Average__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Rating Average</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Reviews_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reviews Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>partdir_mp__SocialNetworkFacebook__c</fullName>
        <label>Social Network Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__SocialNetworkInstagram__c</fullName>
        <label>Social Network Instagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__SocialNetworkLinkedIn__c</fullName>
        <label>Social Network LinkedIn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__SocialNetworkTwitter__c</fullName>
        <label>Social Network Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__SocialNetworkYoutube__c</fullName>
        <label>Social Network Youtube</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Account_Brands</fullName>
        <filterScope>Everything</filterScope>
        <label>All Account Brands</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>